--- a/mod1-solution/index.html
+++ b/mod1-solution/index.html
@@ -25,7 +25,7 @@
              <button class="btn btn-default"
              ng-click="showMessage();">Check If Too Much</button>
          </div>
-         <div class="form-group message">
+         <div class="form-group message" style={{color}}>
            {{response}}
          </div>
    </div>
